<resources>
    <string name="app_name">Loo-LookOut</string>
    <string name="defaultText">ew</string>

    <string name="my_google_maps_key">AIzaSyAen9NzPj2xYZtK1EUVBBpEmMIQLq5S85M"</string>

    <string name="Filter">Filter Settings</string>
    <string name="Update">New Complaint</string>
    <string name="NewCancel">Cancel Report</string>
    <string name="Refresh">Refresh Map</string>
    <string name="New">New Report</string>
    <string name="NewContinue">Continue Report</string>
    <string name="About">About this App</string>
    <string name="RestroomInformation">Restroom Features</string>

    <string name="minimize">Minimize</string>
    <string name="gender">Gender</string>
    <string name="size">Size</string>
    <string name="traffic">Traffic</string>
    <string name="access">Access</string>
    <string name="closing">Closing Hours</string>
    <string name="amenities">Amenities</string>
    <string name="date">Report Info</string>

    <string name="spacer">:</string>

    <string name="new_one">New</string>
    <string name="exist_one">Existing</string>

    <string name="cannot_find">I cannot find it</string>
    <string name="look_more">I will look some more</string>

    <string name="Cancel">Cancel Changes</string>
    <string name="Reset">Reset To Default</string>
    <string name="Apply">Apply Changes</string>

    <string name="none">N/A</string>

    <string name="inclusive">Inclusive</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="family">Family</string>

    <string name="single">Single (T=1)</string>
    <string name="small">Small (T&lt;3)</string>
    <string name="medium">Medium (T&lt;6)</string>
    <string name="large">Large (T&lt;=6)</string>

    <string name="clean">Clean:</string>
    <string name="time">Closing Time:</string>

    <string name="dirty">Dirty</string>

    <string name="low">Low</string>
    <string name="some">Some</string>
    <string name="high">High</string>

    <string name="publicUse">Public</string>
    <string name="customerUse">Customer Only</string>
    <string name="privateUse">Private</string>

    <string name="diaper">Diaper Changing Station</string>
    <string name="condom">Condom Dispenser</string>
    <string name="tampon">Female Hygiene Dispenser</string>

    <string name="required">Required Features:</string>
    <string name="optional">Optional Features:</string>

    <string name="location">Your Location</string>
    <string name="cancel">Cancel Report</string>
    <string name="send">Send Report</string>

    <string name="edit">Edit Restroom</string>
    <string name="report">Report Restroom</string>

    <string name="aboutAppHeader">
        > About This App:
    </string>
    <string name="aboutApp">
        -> This application was made by UC Irvine students for the course CS 125 - Next Gen Search Systems.
        \n-> This app uses micro-reports generated by users to store into a Firebase database for later queries by users.
        \n-> Made in Winter 2018
    </string>

    <string name="aboutTeamHeader">

        \n> About The Team:
    </string>
    <string name="aboutTeam">
        -> Ted Celis:
        \n—> UC Irvine Senior, Computer Science
        \n-> Matthew Gintjee:
        \n—> UC Irvine Senior, Computer Science
        \n-> Vinson Han:
        \n—> UC Irvine Senior, Computer Science
        \n-> Hoang Nguyen:
        \n—> UC Irvine Senior, Computer Science
    </string>

    <string name="plannedFeaturesHeader">
        \n> Planned Features:
    </string>
    <string name="plannedFeatures">
        -> Accounting for which floor the restroom is on
        \n-> Update ALL graphics for consistency
        \n-> Auto-refreshing the map when the user submits a report so that it will show the new restroom
        \n—> (App refreshes the map after every minute.) So it kinda does this
        \n-> If the restroom location is in some distance away from another zipcode, add it to that zipcode group.

    </string>

    <string name="dragText">Press and Hold the pin to drag it to the location</string>
    <string name="changelogHeader">

        \n> Changelog:
    </string>
    <string name="changelog">
        -> V 2.03 (Current):
        \n—> Added a circle around the initial report location so that the user can correctly identify the location within a 30 m radius
        \n—> Added a toast to inform the user how to use the dragging feature when submitting a report

        \n\n-> V 2.02:
        \n—> Fixed issue where user can refresh map and it will try to access a dead marker

        \n\n-> V 2.01:
        \n—> Changed the color and theme of the app
        \n—> Added A refresh button on the main map
        \n—> Changed All buttons to Text buttons for consistency
        \n—> When adding a new report for a restroom it creates a marker on the main map rather than creating a map only for the new report
        \n—> Added headers to all of the activities
        \n—> Removed toasts
        \n—> Reformatted the restroom filters/features radio buttons to take up less space

        \n\n-> V 1.09:
        \n—> Has default static filter of 1000 meters for the restrooms.
        \n——> Planning on letting users modify this filter value.

        \n\n-> V 1.08:
        \n—> When submitting a restroom, it will check nearby locations to see if it falls into another zipcode.
        \n——> If it does then it adds the restroom to that zipcode\'s table.
        \n——> This allows for redundant data, but the margin is small enough that it really only covers boundary restrooms.
        \n—> Does the same for filing complaints.

        \n\n-> V 1.07:
        \n—> Moved toast message to be at the top of the screen to avoid cluttering the bottom.
        \n—> Changed text for filters button to try and make it more clear for the functionality of the buttons.
        \n—> Changed colors from orange to blue.
        \n—> Updated some graphics.
        \n—> Fixed an issue where the app will try to query the DB w/o actually knowing the zipcode.

        \n\n-> V 1.06:
        \n—> Added new activity that allows the user to drag and drop the restroom location for increased accuracy.
        \n—> If the new report has an \"N\A\", it will use the previous report\'s feature instead.

        \n\n-> V 1.05:
        \n—> Release to Production.
        \n—> App refreshes the map after every minute.
        \n——> Unless the user is interacting with it at least once every 30 seconds.
        \n—> Prevent (starting a report)/(filing a complaint) if the app can\'t access the user\'s location.
        \n—> Toast Activity Gates to help users understand what is happening.

        \n\n-> V 1.04: (Beta)
        \n—> Prevented trying to use the database if the database wasn\'t responsive
        \n——> Prevents crashes when the DB isn\'t ready yet
        \n—> On App resume it reloads the user\s location and the restrooms

        \n\n-> V 1.03: (Beta)
        \n—> In theory fixed an issue if the app somehow couldn\'t get the user\'s location it crashed.
        \n—> Finished implementing all the filters. (Amenities and Open or not)
        \n—> App tells the user how many restrooms it found.
        \n—> Filters are saved between activities.
        \n——> NOTE: filters are cleared when the application is closed.
        \n—> Changed the Radio Groups to be vertical to allow for more space for the text.
        \n—> Updated graphics to be more consistent.

        \n\n-> V 1.02: (Beta)
        \n—> Added feature to restrooms: Last Updated feature.

        \n\n-> V 1.01: (Beta)
        \n—> Beta Testing.
    </string>


</resources>
