<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/filters_banner"/>

        <Button
            android:id="@+id/b_ClearFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rG_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/NA_gender"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/NA_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/none"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Inclusive"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/inclusive"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Family"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/family"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rG_Size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/NA_size"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/NA_size"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/none"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Single"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/single"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Small"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/small"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Medium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/medium"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Large"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/large"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clean"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rG_Clean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/NA_clean"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/NA_clean"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/none"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Clean"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/clean"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Dirty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/dirty"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/traffic"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rG_Traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/NA_traffic"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/NA_traffic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/none"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Low"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/low"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Some"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/some"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/High"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/high"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/access"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rG_Access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/NA_access"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/NA_access"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/none"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Public"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/publicUse"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Customer_Only"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/customerUse"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/Private"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/privateUse"
                        android:textAlignment="textStart"
                        android:textSize="14sp" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amenities"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cB_Diaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/diaper" />

                    <CheckBox
                        android:id="@+id/cB_Condom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/condom" />

                    <CheckBox
                        android:id="@+id/cB_Tampon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tampon" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/b_Minimize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/minimize" />

</RelativeLayout>